--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <i class="fa fa-certificate fa-3x text-primary flex-shrink-0"></i>
                         <div class="ps-4">
                             <h5 class="mb-3">Atendimento de qualidade</h5>
-                            <p>Diam dolor diam ipsum sit amet diam et eos erat ipsum</p>
+                            <p>Nosso Centro de Atendimento de Qualidade é dedicado a proporcionar serviços excepcionais, garantindo um atendimento de alto níve.</p>
                             <a class="text-secondary border-bottom" href="">Mais informação</a>
                         </div>
                     </div>
